--- a/src/views/static/footer/index.html
+++ b/src/views/static/footer/index.html
@@ -1,4 +1,4 @@
-<footer class="footer font-two bottom-[0px] text-center w-full fixed m-standard">
+<footer class="footer font-two bottom-0 text-center w-full fixed m-standard">
     <nav class="text-xs flex justify-center items-center uppercase *:m-2 *:flex *:flex-row *:items-center">
         <a href="/book" class="bookFooter">&nbsp;Boka</a>
         <a href="/testimonials" class="reviewsFooter">&nbsp;Recensioner</a>
