Kommentarer i kod för /book och /reviews, fixade footer och layout för alla sidor

--- a/src/views/static/header/index.html
+++ b/src/views/static/header/index.html
@@ -1,4 +1,4 @@
-<header class="flex flex-col items-center font-two uppercase font-bold m-standard">
+<header class="flex-none flex flex-col items-center font-two uppercase font-bold m-standard">
   <nav class="px-8 flex">
     <div class="flex h-20 items-center justify-between">
       <!-- left side  -->
