--- a/src/views/static/footer/index.html
+++ b/src/views/static/footer/index.html
@@ -1,4 +1,4 @@
-<footer class="flex-grow flex flex-col justify-end font-two text-center m-standard">
+<footer class="grow flex flex-col justify-end font-two text-center m-standard">
     <nav class="text-xs flex justify-center items-center uppercase *:m-2 *:flex *:flex-row *:items-center">
         <a href="/book" class="bookFooter">&nbsp;Boka</a>
         <a href="/testimonials" class="reviewsFooter">&nbsp;Recensioner</a>
